Добавила кнопку вызова активити с настройками

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="_second_theme">Dark Theme</string>
     <string name="_first_theme">Light Theme</string>
     <string name="_back">Go Back</string>
+    <string name="_settings">Settings</string>
 </resources>
